--- a/OpenHomeMVC/src/main/resources/templates/place/register.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/register.html
@@ -26,18 +26,7 @@
 				<select name='propertyType' required>
 					<option value='House' selected>House</option>
 					<option value='Apartment'>Apartment</option>
-					<option value='Bed and breakfast'>Bed and breakfast</option>
-					<option value='Boutique hotel'>Boutique hotel</option>
-					<option value='Bungalow'>Bungalow</option>
-					<option value='Cabin'>Cabin</option>
-					<option value='Cottage'>Cottage</option>
-					<option value='Guest suite'>Guest suite</option>
-					<option value='Guesthouse'>Guesthouse</option>
-					<option value='Hotel'>Hotel</option>
-					<option value='Loft'>Loft</option>
-					<option value='Serviced apartment'>Serviced apartment</option>
 					<option value='Townhouse'>Townhouse</option>
-					<option value='Villa'>Villa</option>
 				</select>
 			</td>
 		</tr>
@@ -46,7 +35,6 @@
 			<td>
 				<select name='roomType' required>
 					<option value='Entire House' selected>Entire House</option>
-					<option value='Shared Room'>Shared Room</option>
 					<option value='Private Room'>Private Room</option>
 				</select>
 			</td>
@@ -106,6 +94,28 @@
 		<tr>
 			<th>SqFt</th>
 			<td><input name='sqft' type='number' required></td>
+		</tr>
+		<tr>
+			<th>Contact Phone Number</th>
+			<td><input name='contactPhoneNumber' type='text' required></td>
+		</tr>
+		<tr>
+			<th>Private Bathroom</th>
+			<td>
+				<select name='privateBathroom' required>
+					<option value='true' selected>Yes</option>
+					<option value='false'>No</option>
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<th>Private Shower</th>
+			<td>
+				<select name='privateShower' required>
+					<option value='true' selected>Yes</option>
+					<option value='false'>No</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<th>Description</th>
