--- a/OpenHomeMVC/src/main/resources/templates/place/update.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/update.html
@@ -27,18 +27,7 @@
 				<select name='propertyType' th:field="*{place.placeDetails.propertyType}" required>
 					<option value='House'>House</option>
 					<option value='Apartment'>Apartment</option>
-					<option value='Bed and breakfast'>Bed and breakfast</option>
-					<option value='Boutique hotel'>Boutique hotel</option>
-					<option value='Bungalow'>Bungalow</option>
-					<option value='Cabin'>Cabin</option>
-					<option value='Cottage'>Cottage</option>
-					<option value='Guest suite'>Guest suite</option>
-					<option value='Guesthouse'>Guesthouse</option>
-					<option value='Hotel'>Hotel</option>
-					<option value='Loft'>Loft</option>
-					<option value='Serviced apartment'>Serviced apartment</option>
 					<option value='Townhouse'>Townhouse</option>
-					<option value='Villa'>Villa</option>
 				</select>
 			</td>
 		</tr>
@@ -47,7 +36,6 @@
 			<td>
 				<select name='roomType' th:field="*{place.placeDetails.roomType}" required>
 					<option value='Entire House'>Entire House</option>
-					<option value='Shared Room'>Shared Room</option>
 					<option value='Private Room'>Private Room</option>
 				</select>
 			</td>
@@ -104,6 +92,28 @@
 			<th>SqFt</th>
 			<td><input name='sqft' th:value="${place.placeDetails.sqft}" type='number' required></td>
 		</tr>
+		<tr>
+			<th>Contact Phone Number</th>
+			<td><input name='contactPhoneNumber' th:value="${place.placeDetails.contactPhoneNumber}" type='text' required></td>
+		</tr>
+		<tr>
+			<th>Private Bathroom</th>
+			<td>
+				<select name='privateBathroom' th:field="*{place.placeDetails.privateBathroom}" required>
+					<option value='true' selected>Yes</option>
+					<option value='false'>No</option>
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<th>Private Shower</th>
+			<td>
+				<select name='privateShower' th:field="*{place.placeDetails.privateShower}" required>
+					<option value='true' selected>Yes</option>
+					<option value='false'>No</option>
+				</select>
+			</td>
+		</tr>		
 		<tr>
 			<th>Description</th>
 			<td><textarea name='description'>[[${place.placeDetails.description}]]</textarea></td>
