--- a/OpenHomeMVC/src/main/resources/templates/host/dashboard.html
+++ b/OpenHomeMVC/src/main/resources/templates/host/dashboard.html
@@ -15,7 +15,11 @@
    	<div th:if="${ host.userDetails.phoneNumber != '' && host.userDetails.phoneNumber != host.userDetails.verifiedDetails.verifiedPhoneNumber }">
 		<a href="/verify/phone">Host Verify Phone</a>
    	</div>
-	
+		<a href="/host/logout">Host Logout</a>
+	<div th:if="${ host.userDetails.email == host.userDetails.verifiedDetails.verifiedEmail }">
+		<a href="/place/register">Register Place</a>
+		<a href="/host/place/list">Places List</a>
+   	</div>	
 	<table border="1">
 		<tr>
 			<th>Email</th>
@@ -34,12 +38,35 @@
 			<td>[[${host.userDetails.lastName}]]</td>
 		</tr>
 		<tr>
+			<th>User Registration Type</th>
+			<td>[[${host.userDetails.userRegistrationType}]]</td>
+		</tr>
+		<tr>
 			<th>Phone Number</th>
 			<td>[[${host.userDetails.phoneNumber}]]</td>
 		</tr>
 		<tr>
 			<th>Display Picture</th>
-			<td><img style="width:200px" th:src="${host.userDetails.displayPictureId == null ? 'https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603' : host.userDetails.displayPictureId.url}"></td>
+			<td><img style="width:200px" onerror="this.src='https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603';" th:src="${host.userDetails.displayPictureId == null ? '' : host.userDetails.displayPictureId.url}"></td>
+		</tr>
+		<tr>
+			<th colspan="2">Credit Card Information</th>
+		</tr>
+		<tr>
+			<th>Credit Card Number</th>
+			<td>[[${host.userDetails.creditCard.number}]]</td>
+		</tr>
+		<tr>
+			<th>Credit Card Cvv</th>
+			<td>[[${host.userDetails.creditCard.cvv}]]</td>
+		</tr>
+		<tr>
+			<th>Credit Card Expiry Month</th>
+			<td>[[${host.userDetails.creditCard.expiryMonth}]]</td>
+		</tr>
+		<tr>
+			<th>Credit Card Expiry Year (YY)</th>
+			<td>[[${host.userDetails.creditCard.expiryYear}]]</td>
 		</tr>
 	</table>
 </div>	
