--- a/OpenHomeMVC/src/main/resources/templates/place/preview.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/preview.html
@@ -72,7 +72,7 @@
 	    color: #666;
 	    width: inherit;
 	    text-overflow: ellipsis;
-	    white-place: nowrap;
+	    white-space: nowrap;
 	    overflow: hidden;
 	}
 </style>
