--- a/OpenHomeMVC/src/main/resources/templates/place/register.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/register.html
@@ -14,7 +14,7 @@
 <body>
 <h1>Place Registration Form</h1>
 <p style="color:red">[[${errorMessage}]]</p>
-<form id="myForm" action="/place/register" method="POST">
+<form id="myForm" action="/place/register" method="POST" enctype="multipart/form-data">
 	<table border="1">
 		<tr>
 			<th>Name</th>
