--- a/OpenHomeMVC/src/main/resources/templates/reservation/create.html
+++ b/OpenHomeMVC/src/main/resources/templates/reservation/create.html
@@ -20,6 +20,7 @@
 	<script>
 		var weekdayPrice = [[${place.placeDetails.weekdayRentPrice}]] ;
 		var weekendPrice = [[${place.placeDetails.weekendRentPrice}]] ;
+		var dailyParkingFee = [[${place.placeDetails.dailyParkingFee}]] ;
 		
 		console.log(weekdayPrice);
 		console.log(weekendPrice);
@@ -29,8 +30,8 @@
 			console.log("date changed");
 			var amount = 0;
 			try{
-				var checkIn = new Date($("#checkIn").val()+" 08:00");
-				var checkOut = new Date($("#checkOut").val()+" 08:00");
+				var checkIn = new Date($("#checkIn").val()+" 11:00");
+				var checkOut = new Date($("#checkOut").val()+" 11:00");
 				console.log(checkIn.getTime() +" | " + checkOut.getTime() + " | "+
 						(checkOut.getTime() - checkIn.getTime())+ " | "+(24*60*60*1000)
 								
@@ -41,7 +42,8 @@
 						amount += checkIn.getDay() == 6 ? weekendPrice : weekdayPrice ;
 						checkIn.setTime(checkIn.getTime()+24*60*60*1000);
 						console.log(checkIn.getTime() +" | " +amount);
-						document.getElementById("estimatePrice").value = amount;
+						document.getElementById("estimatePrice").value = amount + dailyParkingFee;
+						console.log(amount + dailyParkingFee);
 					}
 					return;
 					
