Refactored and fixed Mailing Module

--- a/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
+++ b/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Guest Dashboard</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Guest Dashboard</h1>
@@ -26,10 +27,6 @@
 		<tr>
 			<th>Email</th>
 			<td>[[${guest.userDetails.email}]]</td>
-		</tr>
-		<tr>
-			<th>Password</th>
-			<td>[[${guest.userDetails.password}]]</td>
 		</tr>
 		<tr>
 			<th>First Name</th>
