--- a/OpenHomeMVC/src/main/resources/templates/guest/register.html
+++ b/OpenHomeMVC/src/main/resources/templates/guest/register.html
@@ -9,6 +9,7 @@
 		window.location = "/"+successLink;
 	}
 </script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-load-json@1.3.3/src/jquery.loadJSON.min.js"></script>
 </head>
