--- a/OpenHomeMVC/src/main/resources/templates/host/update.html
+++ b/OpenHomeMVC/src/main/resources/templates/host/update.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Host Update</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script>
 	var successLink = "[[${successLink}]]";
 	if(successLink != undefined && successLink != ""){
