--- a/OpenHomeMVC/src/main/resources/templates/place/view.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/view.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Place View</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script>
 	var successLink = "[[${successLink}]]";
 	if(successLink != undefined && successLink != ""){
