--- a/OpenHomeMVC/src/main/resources/templates/place/viewall.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/viewall.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Place List</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Place List</h1>
