--- a/OpenHomeMVC/src/main/resources/templates/reservation/list.html
+++ b/OpenHomeMVC/src/main/resources/templates/reservation/list.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Place Reservation List</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Place Reservation List</h1>
@@ -13,7 +14,7 @@
 			<td>Check In</td>
 			<td>Check Out</td>
 			<td>Actual Check In</td>
-			<td>Actual Check In</td>
+			<td>Actual Check Out</td>
 			<td>Place Id</td>
 			<td>Guest</td>
 			<td>State</td>
@@ -24,10 +25,9 @@
 		<tr th:each="reservation : ${reservations}">
 			<td><a th:href="@{'/reservation/view?reservationId=' + ${reservation.id}}">[[${reservation.id}]]</a></td>
 			<td>[[${reservation.createdDate}]]</td>
-			<td>[[${reservation.checkIn}]]</td>
-			<td>[[${reservation.checkOut}]]</td>
-			<td>[[${reservation.actualCheckIn}]]</td>
-			<td>[[${reservation.actualCheckOut}]]</td>
+			<td>[[${#dates.format(new java.util.Date(reservation.checkIn))}]]</td>
+			<td>[[${#dates.format(new java.util.Date(reservation.checkOut))}]]</td>
+			<td>[[${reservation.actualCheckIn == null ? '' : #dates.format(new java.util.Date(reservation.actualCheckIn))}]]</td>			<td>[[${#dates.format(new java.util.Date(reservation.actualCheckOut))}]]</td>
 			<td><a th:href="@{'/place/view?placeId=' + ${reservation.place.id}}">[[${reservation.place.placeDetails.name}]]</a></td>
 			<td>[[${reservation.guest.userDetails.email}]]</td>
 			<td>[[${reservation.reservationState}]]</td>
