--- a/OpenHomeMVC/src/main/resources/templates/timedelta.html
+++ b/OpenHomeMVC/src/main/resources/templates/timedelta.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Time Delta</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
