--- a/OpenHomeMVC/src/main/resources/templates/user/forgotpassword.html
+++ b/OpenHomeMVC/src/main/resources/templates/user/forgotpassword.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Forgot Password</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
 	var successLink = "[[${successLink}]]";
