--- a/OpenHomeMVC/src/main/resources/templates/user/verify/phone.html
+++ b/OpenHomeMVC/src/main/resources/templates/user/verify/phone.html
@@ -9,6 +9,7 @@
 		window.location = "/"+successLink;
 	}
 </script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<p style="color:red">[[${errorMessage}]]</p>
