--- a/OpenHomeMVC/src/main/resources/templates/guest/update.html
+++ b/OpenHomeMVC/src/main/resources/templates/guest/update.html
@@ -9,6 +9,7 @@
 		window.location = "/"+successLink;
 	}
 </script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Guest Update Form</h1>
