--- a/OpenHomeMVC/src/main/resources/templates/host/login.html
+++ b/OpenHomeMVC/src/main/resources/templates/host/login.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Host Login</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script>
 	var successLink = "[[${successLink}]]";
 	if(successLink != undefined && successLink != ""){
@@ -11,24 +12,16 @@
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-load-json@1.3.3/src/jquery.loadJSON.min.js"></script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 <h1>Host Login Form</h1>
 <p style="color:red">[[${errorMessage}]]</p>
 <form id="myForm" action="/host/login" method="POST" onsubmit="return preSubmit();">
-	<table border="1">
-		<tr>
-			<th>Email</th>
-			<td><input name="email" id="email" required></td>
-		</tr>
-		<tr>
-			<th>Password</th>
-			<td><input name="password" required></td>
-		</tr>
-		<tr>
-			<td colspan="2"><input type="submit"></td>
-		</tr>
-	</table>
+	<input name="email" id="email" placeholder="Email" class="underlineinput" required><br>
+	<input name="password" placeholder="Password" class="underlineinput" required><br>
+	<input type="submit">
 </form>
 
 	<button onclick="googleSignIn()"><img src="https://developers.google.com/identity/images/btn_google_signin_light_normal_web.png"></button>
@@ -108,7 +101,7 @@
 		  }
 
 </script>
-
+<br>
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 	
