--- a/OpenHomeMVC/src/main/resources/templates/place/imagesUpdateDelete.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/imagesUpdateDelete.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <script>
 	var closeOp = "[[${close}]]";
 	if(closeOp == "yes"){
