--- a/OpenHomeMVC/src/main/resources/templates/place/list.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/list.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Place List</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 <style>
 	img{
 	width:200px;
