--- a/OpenHomeMVC/src/main/resources/templates/reservation/create.html
+++ b/OpenHomeMVC/src/main/resources/templates/reservation/create.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Reservation Create</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Reservation Create</h1>
