--- a/OpenHomeMVC/src/main/resources/templates/reservation/view.html
+++ b/OpenHomeMVC/src/main/resources/templates/reservation/view.html
@@ -3,14 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Reservation Read</title>
+<link href="/basic.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Reservation Read</h1>
-	<div th:if="${hostAccess == false}">
-		<div th:if="${reservation.reservationState == Booked}">
-			<a th:href="@{'/reservation/checkIn?reservationId=' + ${reservation.id}}">Check In</a>
+	<div th:if="${hostAccess == true}">
+		<div th:if="${#strings.toString(reservation.reservationState) == 'Booked' || #strings.toString(reservation.reservationState) == 'CheckedIn' }">
+			<a th:href="@{'/reservation/cancel?reservationId=' + ${reservation.id}}">Cancel Reservation</a>
 		</div>
 	</div>
+	<div th:if="${hostAccess == false}">
+		<div th:if="${#strings.toString(reservation.reservationState) == 'Booked'}">
+			<a th:href="@{'/reservation/checkIn?reservationId=' + ${reservation.id}}">Check In</a>
+			<a th:href="@{'/reservation/cancel?reservationId=' + ${reservation.id}}">Cancel Reservation</a>
+		</div>
+		<div th:if="${#strings.toString(reservation.reservationState) == 'CheckedIn'}">
+			<a th:href="@{'/reservation/checkOut?reservationId=' + ${reservation.id}}">Check Out</a>
+		</div>
+	</div>
+	<a th:href="@{'/transaction/list?reservationId=' + ${reservation.id}}">View All Transactions</a>
 	<table border="1">
 		<tr>
 			<td>Reservation Id</td>
@@ -22,19 +33,19 @@
 		</tr>
 		<tr>
 			<td>Reservation Check In</td>
-			<td>[[${reservation.checkIn}]]</td>
+			<td>[[${#dates.format(new java.util.Date(reservation.checkIn))}]]</td>
 		</tr>
 		<tr>
 			<td>Reservation Check Out</td>
-			<td>[[${reservation.checkOut}]]</td>
+			<td>[[${#dates.format(new java.util.Date(reservation.checkOut))}]]</td>
 		</tr>
 		<tr>
 			<td>Reservation Actual Check In</td>
-			<td>[[${reservation.actualCheckIn}]]</td>
+			<td>[[${reservation.actualCheckIn == null ? '' : #dates.format(new java.util.Date(reservation.actualCheckIn))}]]</td>
 		</tr>
 		<tr>
 			<td>Reservation Actual Check Out</td>
-			<td>[[${reservation.actualCheckOut}]]</td>
+			<td>[[${#dates.format(new java.util.Date(reservation.actualCheckOut))}]]</td>
 		</tr>
 		<tr>
 			<td>Reservation Place Id</td>
