--- a/OpenHomeMVC/src/main/resources/templates/place/view.html
+++ b/OpenHomeMVC/src/main/resources/templates/place/view.html
@@ -34,30 +34,31 @@ img{
 <table border="1">
 	<tr>
 		<th>Name</th>
-		<td><input readonly name="name" th:value="${place.placeDetails.name}" ></td>
+		<td>[[${place.placeDetails.name}]]</td>
 	</tr>
 	<tr>
 		<th>Property Type</th>
-		<td>
-			<select readonly name='propertyType' th:value="${place.placeDetails.propertyType}" >
-				<option value='House' selected>House</option>
-				<option value='Apartment'>Apartment</option>
-				<option value='Townhouse'>Townhouse</option>
-			</select>
-		</td>
+		<td>[[${place.placeDetails.propertyType}]]</td>
 	</tr>
 	<tr>
 		<th>Room Type</th>
-		<td>
-			<select readonly name='roomType' th:value="${place.placeDetails.roomType}" >
-				<option value='Entire House' selected>Entire House</option>
-				<option value='Private Room'>Private Room</option>
-			</select>
-		</td>
+		<td>[[${place.placeDetails.roomType}]]</td>
+	</tr>
+	<tr>
+		<th>Host</th>
+		<td><a th:href="@{'/host/view?hostId=' + ${place.host.id}}">[[${place.host.userDetails.email}]]</a></td>
+	</tr>
+	<tr>
+		<th>Avg Rating</th>
+		<td>[[${place.placeDetails.averageRating}]]</td>
+	</tr>
+	<tr>
+		<th>Total Ratings Count</th>
+		<td>[[${place.placeDetails.totalReviewsCount}]]</td>
 	</tr>
 	<tr>
 		<th>Accomodates</th>
-		<td><input readonly name='accomodates' th:value="${place.placeDetails.accomodates}" type='number' ></td>
+		<td>[[${place.placeDetails.accomodates}]]</td>
 	</tr>
 	<tr>
 		<th>Amenities</th>
@@ -101,27 +102,27 @@ img{
 	</tr>
 	<tr>
 		<th>No Of Bedrooms</th>
-		<td><input readonly name='noOfBedrooms' th:value="${place.placeDetails.noOfBedrooms}" type='number' ></td>
+		<td>[[${place.placeDetails.noOfBedrooms}]]</td>
 	</tr>
 	<tr>
 		<th>No Of Bathrooms</th>
-		<td><input readonly name='noOfBathrooms' th:value="${place.placeDetails.noOfBathrooms}" type='number' ></td>
+		<td>[[${place.placeDetails.noOfBathrooms}]]</td>
 	</tr>
 	<tr>
 		<th>No Of Beds</th>
-		<td><input readonly name='noOfBeds' th:value="${place.placeDetails.noOfBeds}" type='number' ></td>
+		<td>[[${place.placeDetails.noOfBeds}]]</td>
 	</tr>
 	<tr>
 		<th>Weekday Rent Price</th>
-		<td><input readonly name='weekdayRentPrice' th:value="${place.placeDetails.weekdayRentPrice}" type='number' ></td>
+		<td>[[${place.placeDetails.weekdayRentPrice}]]</td>
 	</tr>
 	<tr>
 		<th>Weekend Rent Price</th>
-		<td><input readonly name='weekendRentPrice' th:value="${place.placeDetails.weekendRentPrice}" type='number' ></td>
+		<td>[[${place.placeDetails.weekendRentPrice}]]</td>
 	</tr>
 	<tr>
 		<th>SqFt</th>
-		<td><input readonly name='sqft' th:value="${place.placeDetails.sqft}" type='number' ></td>
+		<td>[[${place.placeDetails.sqft}]]</td>
 	</tr>
 	<tr>
 		<th>Private Bathroom</th>
@@ -143,7 +144,7 @@ img{
 	</tr>			
 	<tr>
 		<th>Description</th>
-		<td><textarea readonly name='description' >[[${place.placeDetails.description}]]</textarea></td>
+		<td>[[${place.placeDetails.description}]]</td>
 	</tr>
 	<tr>
 		<th>Free WiFi</th>
@@ -165,39 +166,39 @@ img{
 	</tr>
 	<tr>
 		<th>Daily Parking Fee</th>
-		<td><input readonly name='dailyParkingFee' th:value="${place.placeDetails.dailyParkingFee}" type='number' ></td>
+		<td>[[${place.placeDetails.dailyParkingFee}]]</td>
 	</tr>
 	<tr>
 		<th>Latitude</th>
-		<td><input readonly name="address.latitude" th:value="${place.placeDetails.address.latitude}"  ></td>
+		<td>[[${place.placeDetails.address.latitude}]]</td>
 	</tr>
 	<tr>
 		<th>Longitude</th>
-		<td><input readonly name="address.longitude" th:value="${place.placeDetails.address.longitude}"  ></td>
+		<td>[[${place.placeDetails.address.longitude}]]</td>
 	</tr>
 	<tr>
 		<th>Address Line 1</th>
-		<td><input readonly name="address.addressLine1" th:value="${place.placeDetails.address.addressLine1}" ></td>
+		<td>[[${place.placeDetails.address.addressLine1}]]</td>
 	</tr>
 	<tr>
 		<th>Address Line 2</th>
-		<td><input readonly name="address.addressLine2" th:value="${place.placeDetails.address.addressLine2}" ></td>
+		<td>[[${place.placeDetails.address.addressLine2}]]</td>
 	</tr>
 	<tr>
 		<th>City</th>
-		<td><input readonly name="address.city" th:value="${place.placeDetails.address.city}"  ></td>
+		<td>[[${place.placeDetails.address.city}]]</td>
 	</tr>
 	<tr>
 		<th>State</th>
-		<td><input readonly name="address.state" th:value="${place.placeDetails.address.state}"  ></td>
+		<td>[[${place.placeDetails.address.state}]]</td>
 	</tr>
 	<tr>
 		<th>Zip</th>
-		<td><input readonly name="address.zip" th:value="${place.placeDetails.address.zip}"  ></td>
+		<td>[[${place.placeDetails.address.zip}]]</td>
 	</tr>
 	<tr>
 		<th>Country</th>
-		<td><input readonly name="address.country" th:value="${place.placeDetails.address.country}"  ></td>
+		<td>[[${place.placeDetails.address.country}]]</td>
 	</tr>
 </table>
 <script>
